@@ -1272,14 +1272,6 @@ Some variables function as toggles (On/Off).  Unless otherwise noted 0 is Off an
 	</td>
 </tr>
 <tr>
-	<td width="20%" bgcolor="#ddddff">
-		$g_register_globals
-	</td>
-	<td width="80%" bgcolor="#ffffff">
-		Experimental.  If your register_globals is Off then set this to OFF.  Check your register_globals setting in php.ini or phpinfo().
-	</td>
-</tr>
-<tr>
 	<td colspan="2" bgcolor="#eeeeee">
 		&nbsp;
 	</td>
