@@ -135,6 +135,7 @@ Mantis ChangeLog
  * New config option (store_reminders): controls whether to store sent reminders as a bugnote
  * New config option (bug_reminder_threshold): the access level required to send reminders
  * New config option (reminder_recipents_monitor_bug): To automatically add recipients of bug reminders to the monitor list of the defect.  This is done if the access level is greater than or equal to monitor threshold and the recipient is not the handler or the reporter.
+ * Security fix: Mantis no longer relies on register_globals being turned on
 
 2002.08.23  -  0.17.5
  * Corrected bug_delete.php and bug_delete_page.php, which ignored the $g_allow_bug_delete_access_level setting.
